<resources>
    <string name="app_name">阿米巴</string>
    <string name="login_name">用户名:</string>
    <string name="login_pwd">密码:</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_email">邮箱</string>

    <string name="dao">道</string>
    <string name="fa">法</string>
    <string name="shu">术</string>
    <string name="wo">我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_report">AddReportActivity</string>
</resources>
