<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/login_name"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="#0000ff"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etRegisterName"
            android:layout_weight="2"
            android:hint="your name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/login_pwd"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="#0000ff"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_weight="2"
            android:hint="your pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/login_email"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="#0000ff"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_weight="2"
            android:hint="your email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:text="@string/login_register"
        android:id="@+id/btnRegisterStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/login_login"
        android:id="@+id/btnRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:max="10"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/pbRegister"
        android:layout_gravity="center_horizontal" />



</LinearLayout>
